--- a/wml-websocket-web/WebContent/WEB-INF/web.xml
+++ b/wml-websocket-web/WebContent/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:web="http://java.sun.com/xml/ns/javaee" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-	id="WebApp_ID" version="2.5">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+	id="WebApp_ID" version="3.0">
   	<display-name>Spring3MVC</display-name>
   	<welcome-file-list>
     	<welcome-file>index.jsp</welcome-file>
@@ -56,11 +56,11 @@
   	<filter-mapping>
 	    <filter-name>portalAuthFilter</filter-name>
 	    <url-pattern>*.shtml</url-pattern>
-  	</filter-mapping> -->
+  	</filter-mapping>
   	<filter-mapping>
 	    <filter-name>portalAuthFilter</filter-name>
 	    <url-pattern>*.ajax</url-pattern>
-   	</filter-mapping> 
+   	</filter-mapping>  -->
   	<servlet>
 	    <servlet-name>springServlet</servlet-name>
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -77,6 +77,10 @@
   	<servlet-mapping>
 	    <servlet-name>springServlet</servlet-name>
 	    <url-pattern>*.do</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+	    <servlet-name>springServlet</servlet-name>
+	    <url-pattern>/</url-pattern>
   	</servlet-mapping>
   	<error-page>
 	    <exception-type>java.lang.Throwable</exception-type>
