--- a/wml-websocket-web/pom.xml
+++ b/wml-websocket-web/pom.xml
@@ -58,13 +58,13 @@
             <artifactId>spring-messaging</artifactId>
             <version>4.0.3.RELEASE</version>
         </dependency>
-        <dependency>
-		    <groupId>com.google.code.gson</groupId>
-		    <artifactId>gson</artifactId>
-		    <version>2.3</version>
-		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/gson-2.3.jar</systemPath>
-		</dependency>
+<!--         <dependency> -->
+<!-- 		    <groupId>com.google.code.gson</groupId> -->
+<!-- 		    <artifactId>gson</artifactId> -->
+<!-- 		    <version>2.3</version> -->
+<!-- 		    <scope>system</scope> -->
+<!-- 		    <systemPath>${project.basedir}/lib/gson-2.3.jar</systemPath> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	
 	<build>
